--- a/AmikomApp/app/src/main/res/layout/activity_main.xml
+++ b/AmikomApp/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.milhamr.amikomapp.MainActivity">
+    tools:context="com.milhamr.amikomapp.LoginActivity">
 
-    <TextView
-        android:id="@+id/textView6"
+    <EditText
+        android:id="@+id/usr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ilham Ramadhan"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="79dp" />
+
+    <EditText
+        android:id="@+id/pwd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:layout_below="@+id/usr"
+        android:layout_alignLeft="@+id/usr"
+        android:layout_alignStart="@+id/usr"
+        android:layout_marginTop="33dp" />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
