--- a/AmikomApp/app/src/main/res/layout/activity_splash.xml
+++ b/AmikomApp/app/src/main/res/layout/activity_splash.xml
@@ -7,10 +7,13 @@
     tools:context="com.milhamr.amikomapp.SplashActivity">
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="299dp"
-        android:layout_height="168dp"
+        android:id="@+id/imageView"
+        android:layout_width="326dp"
+        android:layout_height="478dp"
         app:srcCompat="@mipmap/logo"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
